--- a/.github/pages/manifest.json
+++ b/.github/pages/manifest.json
@@ -5,7 +5,7 @@
         "chipFamily": "ESP32",
         "improv": true,
         "parts": [
-          { "path": "cyd2usb.bin", "offset": 0 }
+          { "path": "esp32_merged.bin", "offset": 0 }
         ]
       }
     ]
